change navigation to collapsed, fix search resize

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -3,51 +3,55 @@
 //
 
 #shadow {
-	background: #000;
-	opacity: 0.3;
-	filter: alpha(opacity=90);
-	position: fixed;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	z-index: 100;
-	display: none;
+    background: #000;
+    opacity: 0.3;
+    filter: alpha(opacity=90);
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 100;
+    display: none;
 }
 
 .navbar-dark .navbar-nav .nav-link {
-    &:hover, &:focus, &:active {
+    &:hover,
+    &:focus,
+    &:active {
         color: $blue;
     }
-        .active { 
-            color: $blue;
-        }
+    .active {
+        color: $blue;
+    }
 }
 
 @media (max-width: 767px) {
     #navbarOffcanvas {
-        
         .dropdown-item {
             &.active,
             &:active {
                 background-color: white;
             }
 
-            &:hover, &:focus {
-                    color: $blue;
+            &:hover,
+            &:focus {
+                color: $blue;
             }
         }
-        
+
         .dropdown-menu {
-            background-color: #F5F8FA;
+            background-color: #f5f8fa;
             border: 0;
             border-radius: 2px;
-            
+            min-width: 7rem;
 
             .nav-link {
                 color: $primary;
 
-                &:hover, &:focus, &:active {
+                &:hover,
+                &:focus,
+                &:active {
                     color: $blue;
                     background-color: white;
                     -webkit-box-shadow: none;
@@ -57,13 +61,13 @@
             }
         }
 
-        #navbarDropdownMenuLink{
+        #navbarDropdownMenuLink {
             //padding-left: 12px;
         }
 
         .devider {
             border-left: 1px solid white;
-			height: 20px;
+            height: 20px;
         }
 
         .nav-link {
@@ -73,12 +77,12 @@
         .navbar-brand {
             padding: 0;
             margin: 0;
-            
+
             max-width: 190px;
             .navbar-logo {
                 > svg {
                     width: 190px;
-                    max-width:100%;
+                    max-width: 100%;
                     margin: 0;
                     padding-right: 0.25rem;
                 }
@@ -88,16 +92,51 @@
 }
 
 @media (min-width: 767px) {
+    .navbar-nav > .nav-item > .dropdown-menu {
+        background-color: #f5f8fa;
+        border: 0;
+        border-radius: 2px;
+        min-width: 7rem;
+
+        .dropdown-item {
+            &.active,
+            &:active {
+                background-color: white;
+            }
+
+            &:hover,
+            &:focus {
+                color: $blue;
+            }
+        }
+
+        .nav-link {
+            color: $primary;
+            font-size: 1rem;
+
+            padding-right: 0.5rem;
+            padding-left: 0.5rem;
+
+            &:hover,
+            &:focus,
+            &:active {
+                color: $blue;
+                background-color: white;
+                -webkit-box-shadow: none;
+                -moz-box-shadow: none;
+                box-shadow: none;
+            }
+        }
+    }
+
     #navbarOffcanvas {
-        .mobile-dropdown{
+        .mobile-dropdown {
             display: none;
         }
     }
 }
 
-
 .navbar-offcanvas {
-
     .td-search-input {
         max-width: 90%;
         border: none;
@@ -108,13 +147,12 @@
             height: calc(1.5em + 0.75rem + 2px);
             font-size: 1rem;
             padding: 0.375rem 0.75rem;
-            
         }
         border-bottom: 1.5px solid $primary;
         outline: 0;
         padding: 0 0 0 0.3rem;
         font-size: smaller;
-        
+
         &:focus {
             background: transparent;
 
@@ -136,12 +174,12 @@
     }
 }
 
-nav .navbar-logo > svg  { 
+nav .navbar-logo > svg {
     // max-height: 75%;
-    max-width: 75%; 
+    max-width: 75%;
     overflow: visible;
     padding-top: 0;
-    padding-bottom: 0; 
+    padding-bottom: 0;
 }
 
 .td-navbar-cover {
@@ -153,7 +191,6 @@ nav .navbar-logo > svg  {
         .nav-link {
             text-shadow: 1px 1px 2px $dark;
         }
-
     }
 
     &.navbar-bg-onscroll .nav-link {
@@ -170,7 +207,7 @@ nav .navbar-logo > svg  {
     background: $primary;
     min-height: 3.7rem;
     padding: 0;
-    
+
     margin: 0;
     z-index: 32;
 
@@ -180,13 +217,11 @@ nav .navbar-logo > svg  {
         width: 100%;
     }
 
-
     .navbar-brand {
         text-transform: none;
         text-align: middle;
-        
 
-        .font-weight-semi-bold{
+        .font-weight-semi-bold {
             font-size: $font-size-base * 1.8;
             font-weight: $font-weight-semi-bold;
         }
@@ -206,23 +241,28 @@ nav .navbar-logo > svg  {
     .nav-link {
         text-transform: none;
         font-weight: $font-weight-semi-bold;
-        font-size: $font-size-base*0.9;
+        font-size: $font-size-base * 0.9;
     }
-    
+
     .td-search-input {
-        color:white ;
+        color: white;
         display: inline-block;
         border: none;
         border-bottom: 1.5px solid darken($color: white, $amount: 20);
         outline: 0;
         font-weight: 400;
         padding: 0.15rem 0 0 0.1rem;
+
+        @include media-breakpoint-down(md) {
+            margin-left: 1rem;
+        }
+
         height: calc(1.4em + 0.7rem + 2px);
 
         @include placeholder {
             color: darken($color: white, $amount: 20);
         }
-        
+
         &:focus {
             background: transparent;
             border-color: white;
@@ -234,31 +274,30 @@ nav .navbar-logo > svg  {
     }
 
     .dropdown {
-        min-width: 100px;
+        min-width: 65px;
     }
 
     @include media-breakpoint-down(md) {
-        padding-right: .5rem;
-        padding-left: .75rem;
+        padding-right: 0.5rem;
+        padding-left: 0.75rem;
 
         .td-navbar-nav-scroll {
             max-width: 100%;
             height: 2.5rem;
-            margin-top: .25rem;
-            overflow: hidden;
-            font-size: .875rem;
+            margin-top: 0.25rem;
+            //overflow: hidden;
+            font-size: 0.875rem;
 
             .nav-link {
-                padding-right: .25rem;
+                padding-right: 0.25rem;
                 padding-left: 0;
             }
 
             .navbar-nav {
                 padding-bottom: 2rem;
-                overflow-x: auto;
+                //overflow-x: auto;
                 white-space: nowrap;
                 -webkit-overflow-scrolling: touch;
-
             }
         }
     }
@@ -271,7 +310,7 @@ nav .navbar-logo > svg  {
 // Icons
 #main_navbar {
     li i {
-    padding-right: 0.5em;
+        padding-right: 0.5em;
 
         &:before {
             display: inline-block;
@@ -279,12 +318,12 @@ nav .navbar-logo > svg  {
             min-width: 1em;
         }
     }
-  .alert {
-    background-color: inherit;
-    padding:0;
-    color: $secondary;
-    border: 0;
-    font-weight: inherit;
+    .alert {
+        background-color: inherit;
+        padding: 0;
+        color: $secondary;
+        border: 0;
+        font-weight: inherit;
 
         &:before {
             display: inline-block;
@@ -293,10 +332,10 @@ nav .navbar-logo > svg  {
             text-rendering: auto;
             -webkit-font-smoothing: antialiased;
             font-family: "Font Awesome 5 Free";
-            font-weight: 900; 
+            font-weight: 900;
             content: "\f0d9";
             padding-left: 0.5em;
             padding-right: 0.5em;
         }
-    }  
+    }
 }
